--- a/WeatherWebAppLuiC/Pages/Index.cshtml
+++ b/WeatherWebAppLuiC/Pages/Index.cshtml
@@ -9,9 +9,15 @@
 </div>
 
 <div class="text-center mt-4">
-    <form>
-        <input type="text" class="form-control d-inline-block w-75" placeholder="Input your city here!" style="max-width: 300px;" />
+    <form method="post">
+        <input asp-for="City" type="text" class="form-control d-inline-block w-75" placeholder="Input city here!" style="max-width: 250px;"/>
         <button type="submit" class="btn btn-primary ml-2">Search</button>
     </form>
+    @if (Model.Weather != null)
+    {
+        <div class="mt-3">
+            <strong>@Model.Weather.City</strong>: @Model.Weather.WeatherDescription, @Model.Weather.Temps&nbsp;°C
+        </div>
+    }
 </div>
 </div>
