git commit -main "2nd push"

--- a/WeatherWebAppLuiC/Pages/Privacy.cshtml
+++ b/WeatherWebAppLuiC/Pages/Privacy.cshtml
@@ -4,5 +4,5 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
-<p>Use this page to detail your site's privacy policy.</p>
+<!--TODO: Will add privacy info and how to contact researcher for this project-->
+<p>No info yet</p>
