--- a/WeatherWebAppLuiC/wwwroot/css/site.css
+++ b/WeatherWebAppLuiC/wwwroot/css/site.css
@@ -1,3 +1,11 @@
+
+
+.center-button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 html {
   font-size: 14px;
 }
@@ -28,4 +36,8 @@ body {
 
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
+}
+
+button-search {
+  position: absolute;
 }
