--- a/WeatherWebAppLuiC/Pages/Index.cshtml
+++ b/WeatherWebAppLuiC/Pages/Index.cshtml
@@ -8,6 +8,14 @@
     <h1 class="display-4">Welcome to the Weather App!</h1>
 </div>
 
+<div id="popupModal" class="popup-modal">
+    <div class="popup-content">
+        <span id="closePopup" class="close-button"></span>
+        <p>Welcome to the Weather App! This is created by Lui Contreras for the Final Dissertation in the MSc Computer Science course.</p>
+        <button class="close-button">Close message</button>
+    </div>
+</div>
+
 <div class="d-flex justify-content-center" style="width: 100%;">
     <div class="position-relative mt-3" style="display: inline-block; width: 100%; max-width: 700px; margin-left: auto; margin-right: auto;">
         <img src="/Images/Main/20250401_190146.jpg" alt="London Skyline Sunny Weather" style="max-width: 100%; width: 100%; height: auto; margin-bottom: 20px; box-shadow: 0 2px 8px rgba(0,0,0,0.12);" />
