--- a/WeatherWebAppLuiC/wwwroot/css/site.css
+++ b/WeatherWebAppLuiC/wwwroot/css/site.css
@@ -1,5 +1,33 @@
 
 
+.popup-modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-content {
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 300px;
+  text-align: center;
+  border-radius: 8px;
+  background-color: #fff;
+}
+
+.close-button {
+  color: #000;
+  font-size: 65%;
+  cursor: pointer;
+}
+
 .center-button {
   display: block;
   margin-left: auto;
@@ -55,3 +83,5 @@ button-search {
   length: 25px;
   object-fit: contain;
 }
+
+
