--- a/WeatherWebAppLuiC/Pages/ProjectInfo.cshtml
+++ b/WeatherWebAppLuiC/Pages/ProjectInfo.cshtml
@@ -5,4 +5,4 @@
 }
 
 <h2>Project Info</h2>
-<p>Weather Web Application by Lui Contreras</p>
+<p>Weather Web Application by Lui Contreras for the University of Sunderland.</p>
